# reproducible-builds-example

./: README.md
Debug/: run_build.sh
Debug/srcA/: CMakeLists.txt
Release/: hello_world.cpp  hello_world.hpp  main.cpp  run_build.sh
